--- a/QwQ/QwQ.fsproj
+++ b/QwQ/QwQ.fsproj
@@ -9,8 +9,11 @@
     <Compile Include="Search.fs" />
     <Compile Include="Favorite.fs" />
     <Compile Include="Login.fs" />
+    <Compile Include="Sources/Konachan.fsi" />
+    <Compile Include="Sources/Konachan.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FSharp.Control.AsyncSeq" Version="3.2.1" />
+    <PackageReference Include="FSharp.Data" Version="4.2.5" />
   </ItemGroup>
 </Project>
