--- a/QwQ/QwQ.fsproj
+++ b/QwQ/QwQ.fsproj
@@ -4,6 +4,7 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Utils.fs" />
     <Compile Include="Source.fs" />
     <Compile Include="Tags.fs" />
     <Compile Include="Search.fs" />
