--- a/QwQ/QwQ.fsproj
+++ b/QwQ/QwQ.fsproj
@@ -10,8 +10,8 @@
     <Compile Include="Search.fs" />
     <Compile Include="Favorite.fs" />
     <Compile Include="Login.fs" />
-    <Compile Include="Sources/Konachan.fsi" />
-    <Compile Include="Sources/Konachan.fs" />
+    <Compile Include="Sources/Moebooru.fsi" />
+    <Compile Include="Sources/Moebooru.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FSharp.Control.AsyncSeq" Version="3.2.1" />
