--- a/QwQ/QwQ.fsproj
+++ b/QwQ/QwQ.fsproj
@@ -12,6 +12,7 @@
     <Compile Include="Login.fs" />
     <Compile Include="Sources/Moebooru.fsi" />
     <Compile Include="Sources/Moebooru.fs" />
+    <Compile Include="Sources/Sources.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FSharp.Control.AsyncSeq" Version="3.2.1" />
