--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -18,6 +18,9 @@ jobs:
           - 'HypnoHub'
           - 'Danbooru'
           - 'ATFBooru'
+        targets:
+          - 'list-posts'
+          - 'list-tags'
 
     steps:
     - uses: actions/checkout@v2
@@ -34,6 +37,6 @@ jobs:
       run: dotnet publish ./QwQ/QwQ.fsproj -c Release -f netstandard2.0
       
     - name: Full Test
-      run: dotnet fsi FullTest.fsx ${{ matrix.source }}
+      run: dotnet fsi FullTest.fsx ${{ matrix.source }} --${{ matrix.targets }}
       
       
