--- a/QwQ/QwQ.fsproj
+++ b/QwQ/QwQ.fsproj
@@ -14,6 +14,8 @@
     <Compile Include="Sources/Moebooru.fs" />
     <Compile Include="Sources/Danbooru.fsi" />
     <Compile Include="Sources/Danbooru.fs" />
+    <Compile Include="Sources/Gelbooru.fsi" />
+    <Compile Include="Sources/Gelbooru.fs" />
     <Compile Include="Sources/Sources.fs" />
   </ItemGroup>
   <ItemGroup>
