--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -18,15 +18,13 @@ jobs:
           - 'HypnoHub'
           - 'Danbooru'
           - 'ATFBooru'
+          - 'Sonohara'
+          - 'Hijiribe'
           - 'Gelbooru'
-          - '"The Big ImageBoard (TBIB)"'
+          - 'The Big ImageBoard (TBIB)'
           - 'Safebooru'
           - 'XBooru'
           - 'Rule34'
-          
-        targets:
-          - 'list-posts'
-          - 'list-tags'
 
     steps:
     - uses: actions/checkout@v2
@@ -41,8 +39,10 @@ jobs:
       
     - name: Build
       run: dotnet publish ./QwQ/QwQ.fsproj -c Release -f netstandard2.0
+
+    - name: Test All Tags
+      run: dotnet fsi FullTest.fsx "${{ matrix.source }}" --list-posts
       
-    - name: Full Test
-      run: dotnet fsi FullTest.fsx ${{ matrix.source }} --${{ matrix.targets }}
-      
+    - name: Test All Posts
+      run: dotnet fsi FullTest.fsx "${{ matrix.source }}" --list-tags
       
