--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -25,6 +25,8 @@ jobs:
           - 'Safebooru'
           - 'XBooru'
           - 'Rule34'
+          - 'Sankaku Channel'
+          - 'Idol Complex'
 
     steps:
     - uses: actions/checkout@v2
@@ -46,3 +48,4 @@ jobs:
     - name: Test All Posts
       run: dotnet fsi FullTest.fsx "${{ matrix.source }}" --list-tags
       
+    
