--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -26,7 +26,7 @@ jobs:
           - 'XBooru'
           - 'Rule34'
           - 'Sankaku Channel'
-          - 'Idol Complex'
+        # - 'Idol Complex'
 
     steps:
     - uses: actions/checkout@v2
