--- a/QwQ/QwQ.fsproj
+++ b/QwQ/QwQ.fsproj
@@ -11,13 +11,14 @@
     <Compile Include="Search.fs" />
     <Compile Include="Favorite.fs" />
     <Compile Include="Login.fs" />
+    <Compile Include="AniGuro.fs" />
     <Compile Include="Sources/Moebooru.fsi" />
     <Compile Include="Sources/Moebooru.fs" />
     <Compile Include="Sources/Danbooru.fsi" />
     <Compile Include="Sources/Danbooru.fs" />
     <Content Include="Sources/DanbooruSample.json" />
     <Compile Include="Sources/Gelbooru.fsi" />
-    <Compile Include="Sources/Gelbooru.fs" />    
+    <Compile Include="Sources/Gelbooru.fs" />
     <Content Include="Sources/GelbooruSample.json" />
     <Content Include="Sources/GelbooruTagsSample.xml" />
     <Compile Include="Sources/SankakuComplex.fsi" />
