--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -21,8 +21,8 @@ jobs:
           - 'Sonohara'
           - 'Hijiribe'
           - 'Gelbooru'
-          - 'The Big ImageBoard (TBIB)'
-          - 'Safebooru'
+        # - 'The Big ImageBoard (TBIB)'
+        # - 'Safebooru'
           - 'XBooru'
           - 'Rule34'
           - 'Sankaku Channel'
@@ -61,11 +61,11 @@ jobs:
           - 'Sonohara'
           - 'Hijiribe'
           - 'Gelbooru'
-          - 'The Big ImageBoard (TBIB)'
+        # - 'The Big ImageBoard (TBIB)'
           - 'Safebooru'
           - 'XBooru'
           - 'Rule34'
-          - 'Sankaku Channel'
+        # - 'Sankaku Channel'
           - 'Idol Complex'
 
     steps:
