nekobooru fast impl

--- a/QwQ/QwQ.fsproj
+++ b/QwQ/QwQ.fsproj
@@ -26,6 +26,8 @@
     <Content Include="Sources/SankakuComplexSample.json" />
     <Compile Include="Sources/TheBooruProject.fsi" />
     <Compile Include="Sources/TheBooruProject.fs" />
+    <Compile Include="Sources\Nekobooru.fsi" />
+    <Compile Include="Sources\Nekobooru.fs" />
     <Compile Include="Sources/Sources.fs" />
   </ItemGroup>
   <ItemGroup>
