--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -21,7 +21,7 @@ jobs:
           - 'Sonohara'
           - 'Hijiribe'
           - 'Gelbooru'
-          - 'The Big ImageBoard (TBIB)'
+        # - 'The Big ImageBoard (TBIB)'
           - 'Safebooru'
           - 'XBooru'
           - 'Rule34'
