--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -37,7 +37,7 @@ jobs:
           - 'Hina'
           - 'RuleXXX'
           - 'Nekobooru'
-          - 'NHentai'
+          # - 'NHentai'
 
     steps:
     - uses: actions/checkout@v2
