--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -22,7 +22,7 @@ jobs:
           - 'Hijiribe'
           - 'Gelbooru'
         # - 'The Big ImageBoard (TBIB)'
-          - 'Safebooru'
+        # - 'Safebooru'
           - 'XBooru'
           - 'Rule34'
           - 'Sankaku Channel'
