--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -69,7 +69,7 @@ jobs:
           - 'HypnoHub'
           - 'Danbooru'
           - 'ATFBooru'
-          - 'Sonohara'
+        # - 'Sonohara'
           - 'Hijiribe'
           - 'Gelbooru'
           - 'The Big ImageBoard (TBIB)'
