--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -72,11 +72,11 @@ jobs:
         # - 'Sonohara'
           - 'Hijiribe'
           - 'Gelbooru'
-          - 'The Big ImageBoard (TBIB)'
+        # - 'The Big ImageBoard (TBIB)'
           - 'Safebooru'
           - 'XBooru'
           - 'Rule34'
-          - 'Sankaku Channel'
+        # - 'Sankaku Channel'
           - 'Idol Complex'
           - 'Nekobooru'
 
