--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -20,6 +20,7 @@ jobs:
           - 'ATFBooru'
           - 'Sonohara'
           - 'Hijiribe'
+          - 'Safebooru Donmai'
           - 'Gelbooru'
         # - 'The Big ImageBoard (TBIB)'
         # - 'Safebooru'
@@ -73,6 +74,7 @@ jobs:
           - 'ATFBooru'
         # - 'Sonohara'
           - 'Hijiribe'
+          - 'Safebooru Donmai'
           - 'Gelbooru'
         # - 'The Big ImageBoard (TBIB)'
           - 'Safebooru'
