--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -41,6 +41,7 @@ jobs:
           - 'Tentacle Rape'
           - 'Fan Service'
           - 'NHentai'
+          - 'Nozomi'
 
     steps:
     - uses: actions/checkout@v2
