Nozomi: ISearch, IGetPostById

--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -41,7 +41,7 @@ jobs:
           - 'Tentacle Rape'
           - 'Fan Service'
           - 'NHentai'
-          - 'Nozomi'
+        # - 'Nozomi'
 
     steps:
     - uses: actions/checkout@v2
