--- a/QwQ/QwQ.fsproj
+++ b/QwQ/QwQ.fsproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFrameworks>net6.0;netstandard2.0</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <AssemblyName>QwQ.Core</AssemblyName>
     <LangVersion>preview</LangVersion>
