Lolibaka basiclly supported.

--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -42,6 +42,7 @@ jobs:
           - 'Fan Service'
           - 'NHentai'
         # - 'Nozomi'
+          - 'Lolibaka'
 
     steps:
     - uses: actions/checkout@v2
