--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -40,6 +40,7 @@ jobs:
           - 'Nekobooru'
           - 'Tentacle Rape'
           - 'Fan Service'
+          - 'Rule34 Paheal'
           - 'NHentai'
         # - 'Nozomi'
         # - 'Lolibaka'
