Booru.io supported.

--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -44,6 +44,7 @@ jobs:
           - 'NHentai'
         # - 'Nozomi'
         # - 'Lolibaka'
+          - 'Booru.io'
 
     steps:
     - uses: actions/checkout@v2
