--- a/QwQ/QwQ.fsproj
+++ b/QwQ/QwQ.fsproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>net6.0;netstandard2.0</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
@@ -34,8 +34,10 @@
     <Compile Include="Sources/NHentaiSharp.fs" />
     <Compile Include="Sources/Nozomi.fsi" />
     <Compile Include="Sources/Nozomi.fs" />
-    <Compile Include="Sources\Lolibaka.fsi" />
-    <Compile Include="Sources\Lolibaka.fs" />
+    <Compile Include="Sources/Lolibaka.fsi" />
+    <Compile Include="Sources/Lolibaka.fs" />
+    <Compile Include="Sources/BooruIO.fsi" />
+    <Compile Include="Sources/BooruIO.fs" />
     <Compile Include="Sources/Sources.fs" />
   </ItemGroup>
   <ItemGroup>
