--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -43,6 +43,7 @@ jobs:
           - 'Rule34 Paheal'
           - 'NHentai'
         # - 'Nozomi'
+          - 'Hitomi'
         # - 'Lolibaka'
           - 'Booru.io'
 
