--- a/QwQ/QwQ.fsproj
+++ b/QwQ/QwQ.fsproj
@@ -34,6 +34,9 @@
     <Compile Include="Sources/NHentaiSharp.fs" />
     <Compile Include="Sources/Nozomi.fsi" />
     <Compile Include="Sources/Nozomi.fs" />
+    <Content Include="Sources\HitomiJsonSample.json" />
+    <Compile Include="Sources\Hitomi.fsi" />
+    <Compile Include="Sources\Hitomi.fs" />
     <Compile Include="Sources/Lolibaka.fsi" />
     <Compile Include="Sources/Lolibaka.fs" />
     <Compile Include="Sources/BooruIO.fsi" />
