Hitomi: Search Tags, List Tags

--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -84,6 +84,7 @@ jobs:
           - 'Nekobooru'
           - 'Tentacle Rape'
           - 'Fan Service'
+          - 'Hitomi'
 
     steps:
     - uses: actions/checkout@v2
