Nozomi: Search Tag

--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -84,6 +84,7 @@ jobs:
           - 'Nekobooru'
           - 'Tentacle Rape'
           - 'Fan Service'
+          - 'Nozomi'
           - 'Hitomi'
 
     steps:
